add headings to chapter 6

--- a/Chapter 6.ipynb
+++ b/Chapter 6.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 6"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,6 +19,13 @@
     "import copy\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 6.2 with empircal test for exercise 6.3 and 6.4"
    ]
   },
   {
